--- a/themes/division-reports/src/styles/main.scss
+++ b/themes/division-reports/src/styles/main.scss
@@ -11,6 +11,7 @@
 /* Element Imports
 -------------------------------------------*/
 @import "components/grid-bootstrap-v4";
+@import "components/form-bootstrap";
 @import "components/button-bootstrap";
 @import "components/tables";
 @import "components/skip-link";
@@ -50,6 +51,7 @@
 
 /* Site specific styles
 -------------------------------------------*/
+@import "layout/story";
  @import "layout/default";
 
 /* Print
