circles and stuff

--- a/themes/division-reports/src/styles/main.scss
+++ b/themes/division-reports/src/styles/main.scss
@@ -43,12 +43,15 @@
 // @import "components/sidenav";
 // @import "components/mainnav";
 @import "components/nav";
+@import "components/story-cards";
 @import "components/story-filter";
 @import "components/story-tile";
-@import "components/info-slides";
+@import "components/info-slideshow";
+@import "components/info-slide";
 // @import "components/mobilenav";
 // @import "components/breadcrumbs";
 @import "components/pagination";
+
 
 /* Site specific styles
 -------------------------------------------*/
