--- a/themes/division-reports/src/styles/layout/header.scss
+++ b/themes/division-reports/src/styles/layout/header.scss
@@ -1,5 +1,18 @@
 .header{
+	&__container{
+		margin-top: 80px;
+		margin-bottom: 80px;
+	}
 
+	&__intro{
+		margin-bottom: 0;
+	}
+	&__intro--dark-bg{
+		color: #eee;
+	}	
+	&__page-title{
+		margin-top: 0;
+	}
 	&__container--overlay{
 		position: absolute;
 		top: 0;
@@ -7,13 +20,12 @@
   		width: 100%;
   		left: 0;
   		right: 0; 
-  		margin: auto;
+  		margin-left: auto;
+  		margin-right: auto;
 	}
 	&__text--dark-bg{
 		color: #fff;
 	}	
-	&__intro--dark-bg{
-		color: #eee;
-	}
+
 
 }
