--- a/themes/division-reports/src/styles/components/story-tile.scss
+++ b/themes/division-reports/src/styles/components/story-tile.scss
@@ -4,6 +4,7 @@
 	background-size: cover;
 	position: relative;
 	padding: 30px;
+	background-color: #333;
 	&__header{
 		position: absolute;
 		bottom: 0;
