--- a/themes/division-reports/src/styles/layout/story.scss
+++ b/themes/division-reports/src/styles/layout/story.scss
@@ -62,8 +62,35 @@
 	  padding-left: 3px;
 	}
 }
-.story-share{
+.story-share {
+	text-align: center;
+}
+.story-share__heading {
+	margin-top: 0;
+}
 
+.story-share__social {
+	display: table;
+	list-style: none;
+	margin: 10px auto;
+	& li {
+		display: table-cell;
+		& a {
+			background: #fff;
+			border-radius: 50%;
+			padding: 6px;
+			border: 2px solid #ccc;
+			margin: 0 4px;
+		}
+		& img {
+			display: block;
+			width: 16px;
+			height: 16px;
+		}
+	}
+	& a {
+		display: block;
+	}
 }
 .story-share__heading{
 	padding-top: 20px;
@@ -71,7 +98,7 @@
 }
 .story-meta{
 	@media screen and (min-width: $break-large) {
-		margin-top: 125px;
+		margin-top: 1em;
 	}
 }
 .story-meta__author-img{
