working on percentage block

--- a/themes/division-reports/src/styles/main.scss
+++ b/themes/division-reports/src/styles/main.scss
@@ -25,10 +25,12 @@
 //@import "plugins/shifter";
 @import "plugins/navigation";
 @import "plugins/flickity";
+@import "plugins/lity";
 
 /* Blocks
 -------------------------------------------*/
 @import "components/content-blocks/video";
+@import "components/content-blocks/percentage-block";
 
 /* Layout
 -------------------------------------------*/
