--- a/themes/division-reports/src/styles/components/relatedstories.scss
+++ b/themes/division-reports/src/styles/components/relatedstories.scss
@@ -4,10 +4,6 @@
 	background-color: #f9f8f5;
 }
 .tilter-container {
-	// display: flex;
-	// flex-wrap: wrap;
-	// align-items: flex-start;
-	// justify-content: space-between;
 	position: relative;
 	border-top: 1px solid #ddd;
 	padding-top: 3em;
@@ -110,6 +106,8 @@
 }
 .tilter__image-container {
 	position: relative;
+	max-height: 365px;
+	overflow: hidden;
 }
 .tilter__deco--shine div {
 	position: absolute;
