fixing explore btn target

--- a/themes/division-reports/src/styles/plugins/navigation.scss
+++ b/themes/division-reports/src/styles/plugins/navigation.scss
@@ -37,6 +37,8 @@
     width: 100%;
     cursor: pointer;
     display: block;
+    position: relative;
+    z-index: 1;
 }
 
 .fs-navigation-overlay-nav.fs-navigation-enabled, .fs-navigation-push-nav.fs-navigation-enabled, .fs-navigation-reveal-nav.fs-navigation-enabled {
