making menu button a button

--- a/themes/division-reports/src/styles/components/info-slideshow.scss
+++ b/themes/division-reports/src/styles/components/info-slideshow.scss
@@ -43,8 +43,8 @@
 		left: 0;
 		z-index: 2;
 	}
-	@media (min-width: $break-xlarge) {
-		height: 850px;
+	@media (min-width: $break-large) {
+		height: 840px;
 	}
 }
 
