--- a/themes/division-reports/src/styles/main.scss
+++ b/themes/division-reports/src/styles/main.scss
@@ -56,7 +56,7 @@
 @import "components/story-tile";
 @import "components/info-slideshow";
 @import "components/info-slide";
-
+@import "components/report-archive";
 // @import "components/mobilenav";
 // @import "components/breadcrumbs";
 @import "components/pagination";
