--- a/themes/division-reports/src/styles/components/story-filter.scss
+++ b/themes/division-reports/src/styles/components/story-filter.scss
@@ -44,6 +44,37 @@
 		margin-left: 0;
 		text-align: left;
 	}
+
+	&__search{
+		border: 2px solid #595959;
+		border-radius: 0;
+		background: white;
+		position: relative;
+		padding: 0 5px;	
+		padding-right: 30px;
+	}
+	&__search-input{
+		border: none;
+		margin: 0;
+		padding: 9px 0;
+		display: block;
+		width: 100%;
+
+	}
+	&__search-button{
+		background: none;
+
+	}
+
+	&__search-icon{
+		width: 20px;
+	}
+
+	&__search-action{
+		right: 10px;
+		top: 8px;
+		position: absolute;		
+	}
 }
 
 .filtered-story-card {
