--- a/themes/division-reports/src/styles/main.scss
+++ b/themes/division-reports/src/styles/main.scss
@@ -31,6 +31,7 @@
 -------------------------------------------*/
 @import "components/content-blocks/video";
 @import "components/content-blocks/percentage-block";
+@import "components/content-blocks/graph";
 
 /* Layout
 -------------------------------------------*/
@@ -61,6 +62,8 @@
 // @import "components/breadcrumbs";
 @import "components/pagination";
 @import "components/relatedstories";
+
+
 
 /* Site specific styles
 -------------------------------------------*/
