--- a/themes/division-reports/src/styles/layout/story.scss
+++ b/themes/division-reports/src/styles/layout/story.scss
@@ -292,23 +292,32 @@
 	content: close-quote;
 }
 .content-inner blockquote.right {
-	width: 300px;
-	float: right;
-	margin-right: -40%;
-	margin-left: 3em;
-	margin-top: 0;
-	margin-bottom: 0;
+	@media screen and (min-width: $break-large) {
+		width: 300px;
+		float: right;
+		margin-right: -40%;
+		margin-left: 3em;
+		margin-top: 0;
+		margin-bottom: 0;
+		& p {
+			width: auto;
+		}
+	}
 }
 .content-inner blockquote.left {
-	width: 300px;
-	float: left;
-	margin-left: -40%;
-	margin-right: 3em;
-	margin-top: 0;
-	margin-bottom: 0;
+	@media screen and (min-width: $break-large) {
+		width: 300px;
+		float: left;
+		margin-left: -40%;
+		margin-right: 3em;
+		margin-top: 0;
+		margin-bottom: 0;
+		& p {
+			width: auto;
+		}
+	}
 }
-.content-inner blockquote:not(.right) p {
-	margin: 40px 0;
+.content-inner blockquote p {
 	text-align: center;
 	letter-spacing: -.01em;
 	width: calc(100vw - 100px);
@@ -318,7 +327,8 @@
 	transform: translateX(-50%);
 	font-size: ($base-font * 1.2) + px;
 	@media (min-width: $break-medium) {
-		font-size: ($base-font * 1.5) + px;
+		font-size: ($base-font * 1.3) + px;
+		margin: 40px 0;
 		width: calc(100vw - 160px);
 	}
 }
