--- a/themes/division-reports/src/styles/layout/story.scss
+++ b/themes/division-reports/src/styles/layout/story.scss
@@ -325,7 +325,7 @@
 	position: relative;
 	left: 50%;
 	transform: translateX(-50%);
-	font-size: ($base-font * 1.2) + px;
+	font-size: ($base-font) + px;
 	@media (min-width: $break-medium) {
 		font-size: ($base-font * 1.3) + px;
 		margin: 40px 0;
