--- a/themes/division-reports/src/styles/components/content-blocks/keystatistics.scss
+++ b/themes/division-reports/src/styles/components/content-blocks/keystatistics.scss
@@ -4,6 +4,9 @@
 	padding: 2em 0;
 	position: relative;
 	text-align: center;
+	background-size: cover;
+	background-color: #111;
+	background-position: center top;
 	&__container {
 		position: relative;
 		z-index: 1;
@@ -32,7 +35,7 @@
 		font-weight: bold;
 	}
 	&:after {
-		background-color: rgba(0,0,0,.85);
+		background-color: rgba(0,0,0,.84);
 		content: '';
 		position: absolute;
 		top: 0;
