fixing blockquotes only showing one quotation mark

--- a/themes/division-reports/src/styles/layout/story.scss
+++ b/themes/division-reports/src/styles/layout/story.scss
@@ -280,15 +280,16 @@
 }
 .content-inner blockquote:before,
 .content-inner blockquote:after {
-	content: open-quote;
+	content: "“";
 	font-size: 40px;
 	line-height: 1;
 	top: 10px;
    position: relative;
 }
-.content-inner blockquote.right:after {
-	content: close-quote;
+.content-inner blockquote:after {
+	content: "”";
 }
+
 .content-inner blockquote.right {
 	@media screen and (min-width: $break-large) {
 		width: 300px;
