--- a/themes/division-reports/src/styles/layout/story.scss
+++ b/themes/division-reports/src/styles/layout/story.scss
@@ -182,6 +182,8 @@
 	font-weight: 900;
 	font-size: 21px;
 	margin: 0;
+	text-align: center;
+	line-height: 1.2;
 }
 /* if multiple authors */
 .multiple-authors .story-meta__section-title {
